--- a/MERN/server/config.env
+++ b/MERN/server/config.env
@@ -1,1 +1,1 @@
-ATLAS_URI=mongodb+srv://mern:mongodb@cluster0.duulh.mongodb.net/myFirstDatabase?retryWrites=true&w=majority PORT=5000
+ATLAS_URI=mongodb+srv://go:@cluster0.duulh.mongodb.net/?retryWrites=true&w=majority PORT=5000
